--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electionPortal",
+  "name": "election-portal",
   "version": "yes",
   "description": "online voting using blockchain technology",
   "main": "yes",
@@ -27,7 +27,7 @@
     "typescript": ">=4.5.0"
   },
   "dependencies": {
-    "@ethereum-waffle/chai": "^4.0.10",
+    "@ethereum-waffle/chai": "^2.5.1",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@openzeppelin/contracts": "^4.9.0",
     "hardhat": "^2.11.1"
